   "c:/jjgarcia/bin/foo"

 - If the homedir component contains a tilde itself, ECL entered an infinite
   loop when expanding the pathname

 - Now it should be possible to load the same FASL files multiple times,
   even if previous instances have not completely garbage collected.

 - SI:MKSTEMP now works on Windows for more than 26 temporary file names
   (Dustin Long)

* Unicode:

 - MAKE-STRING only allowed :ELEMENT-TYPE to be one of CHARACTER, BASE-CHAR, or
   STANDARD-CHAR.

 - The FFI will signal a type error when converting extended characters to
   the C types "char" or "unsigned char".

 - Unicode support for ALPHA-CHAR-P, ALPHANUMERICP, CHAR-UPCASE, CHAR-DOWNCASE,
   etc, based on the ISO C99 library functions for wide characters.

 - Following functions fixed to work with Unicode strings: EQUAL, EQUALP,
   PARSE-INTEGER, STRING-TRIM, STRING-LEFT-TRIM, STRING-RIGHT-TRIM,
   COPY-STRUCTURE, SHADOW.

 - Most functions dealing with sequences (REMOVE, DELETE, etc) would
   output a STRING even if the input was a BASE-STRING.

 - TYPE-OF did not recognized EXTENDED-CHARs.

 - Type BASE-STRING and STRING were defined as equivalent.

 - Pathnames now allow extended strings in the names. Errors are signalled,
   however, when a file name contains illegal characters. UTF-8 encoding
   of file names is not supported.

* Other visible changes:

 - New conditional feature, PREFIXED-API, signals that the internal C functions
   now have a common prefix, "ecl_".

 - The interpreter now makes an attempt at showing the offending form
   when a syntax error happens.
	>  (progn (setq a 1) (setq b) (setq c 2))
	In form
	(SETQ B)
	Syntax error: list with too few elements or improperly terminated.
	Broken at SI:EVAL-WITH-ENV.No restarts available.
	Broken at SI::BREAK-WHERE.

 - The documentation shipped with ECL was outdated. To enforce moving on
   to the new manual, the build and installation process now ignores anything
   inside src/doc.
