@@ -273,14 +273,16 @@ cl_class_of(cl_object x)
 	case t_cfun:
 	case t_cclosure:
 		t = @'function'; break;
-	case t_foreign:
-		t = @'si::foreign-data'; break;
 #ifdef ECL_THREADS
 	case t_process:
 		t = @'mp::process'; break;
 	case t_lock:
 		t = @'mp::lock'; break;
 #endif
+	case t_codeblock:
+		t = @'si::code-block'; break;
+	case t_foreign:
+		t = @'si::foreign-data'; break;
 	default:
 		ecl_internal_error("not a lisp data object");
 	}
